services/reservation-service/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reservation-service
  labels:
    app: reservation-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reservation-service
  template:
    metadata:
      labels:
        app: reservation-service
    spec:
      containers:
        - name: reservation-service
          image: reservation:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8083
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8083
            initialDelaySeconds: 120
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8083
            initialDelaySeconds: 120
            periodSeconds: 15
