services/reservation-service/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reservation-service
  labels:
    app: reservation-service
    monitoring: enabled
spec:
  type: ClusterIP
  selector:
    app: reservation-service
  ports:
    - name: http
      port: 8083
      targetPort: 8083
