services/reservation-service/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reservation-service-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: reservation.ticketing.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: reservation-service
                port:
                  number: 8083
